<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SearchActivity" >
		<fragment 
	         android:id="@+id/map"
	         android:layout_width="match_parent"
	         android:layout_height="wrap_content"
	         android:name="me.tuter.fragments.SearchResultsMapFragment"
	         android:tag="@id/map"/>

		<LinearLayout
		    android:layout_height="wrap_content"
		    android:layout_width="fill_parent"
		    android:layout_alignParentBottom="true"
		    android:padding="8dp"
		    android:orientation="vertical"
		    android:background="@color/dark_grey">
		    
		    <EditText
		        android:id="@+id/course_field"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:hint="@string/search_courseHint"
		        android:inputType="text" />

		    <EditText
		        android:id="@+id/location_field"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:hint="@string/search_locationHint"
		        android:inputType="text" />
		    
		    <Button
		        android:layout_height="wrap_content"
	            android:layout_width="fill_parent"
	            android:id="@+id/search_searchButton"
	       	    android:text="@string/search_searchButton"/>
		</LinearLayout>
    
    

</RelativeLayout>